Add enchiladas.html and finalize photos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>Here you can learn how to make the best <a href="recipes/pizza.html">supreme pizza</a>.</p>
+    <img src="img/chef.jpg"
+    <ul>
+        <li>Here you can learn how to make the best <a href="recipes/pizza.html">supreme pizza</a>.</li>
+        <li>Make your mother proud with this classic <a href="recipes/corn_casserole.html">corn casserole</a>.</li>
+        <li>Bring everyone's favorite takeout, <a href="recipes/enchiladas.html">green chili chicken enchiladas</a>, home for dinner tonight.</li>
+    </ul>
 </body>
 
 
