--- a/recipes/corn_casserole.html
+++ b/recipes/corn_casserole.html
@@ -11,5 +11,29 @@
         <h2>Description</h2>
         <p>Do you remember thanksgivings at home? The smell of turkey, stuffing, and most importantly...CORN CASSEROLE!</p>
         <p>Be the center of attention at any fine potluck you attend with this creamy and smooth, but never mushy, corn casserole. Even someone that only knows how to boil water on a good day can surely be the star of the next get together. Now lets cook!</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cans whole kernel corn, drained</li>
+            <li>6 TBSP all-purpose flour</li>
+            <li>6 TBSP white sugar</li>
+            <li>6 TBSP butter, melted</li>
+            <li>4 tsp salt</li>
+            <li>2 chopped pimento peppers</li>
+            <li>6 eggs</li> 
+            <li>½ cup chopped green bell pepper</li>
+            <li>½ pound processed cheese (such as Velveeta®), cubed</li>
+            <li>1½ cups milk</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 350 degrees F (175 degrees C)</li>
+            <li>Stir corn, flour, sugar, butter, salt, pimento peppers, eggs, bell pepper, processed cheese, and milk together in a mixing bowl, respectively; pour into a 9x13-inch baking dish</li>
+            <li>Bake in preheated oven until the cheese is melted, about 45 minutes.</li>
+        </ol>
+
+        <a href="../index.html">Return to home page</a>
+        
     </body>
 </html>
